@@ -621,6 +621,12 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					RelativePath=".\xbmc\MusicInfoTagLoaderCDDA.cpp">
 				</File>
 				<File
+					RelativePath=".\xbmc\MusicInfoTagLoaderDatabase.cpp">
+				</File>
+				<File
+					RelativePath=".\xbmc\MusicInfoTagLoaderDatabase.h">
+				</File>
+				<File
 					RelativePath=".\xbmc\musicInfoTagLoaderFactory.cpp">
 				</File>
 				<File
