@@ -1,0 +1,17 @@
+#pragma once
+
+#include "IMusicInfoTagLoader.h"
+
+using namespace MUSIC_INFO;
+
+namespace MUSIC_INFO
+{
+	class CMusicInfoTagLoaderDatabase: public IMusicInfoTagLoader
+	{
+	public:
+		CMusicInfoTagLoaderDatabase(void);
+		virtual ~CMusicInfoTagLoaderDatabase();
+
+		virtual bool Load(const CStdString& strFileName, CMusicInfoTag& tag);
+	};
+};
